# cimat_sort_rgbd

./: CMakeLists.txt  LICENSE  README.md  package.xml
src/: README.md
src/detector/: people_detection.cpp  simulate_people_detection.cpp
src/sort/: KalmanBoxTracker.cpp  KalmanBoxTracker.h  dataset_sort_test.cpp  sort_proofs.cpp
src/sort/impl/: Hungarian.cpp  KalmanBoxTracker.cpp
src/sort/include/: Hungarian.h  KalmanBoxTracker.h
test/pcl_people_detector/: pcl_people_detection.cpp  simulate_pcl_people_detection.cpp
test/pcl_people_detector/Dataset-Simulation/: README.md  dataset_pcl_people_detection.cpp
utils/Gazebo-Human_Model/: README.md
utils/Gazebo-Human_Model/Human/: model.config  model.sdf
utils/Gazebo-Human_Model/Human/meshes/: Human.dae
utils/dataset/: README.md
