<?xml version="1.0"?>
<package>
  <name>cimat_sort_rgbd</name>
  <version>0.1.0</version>
  <description>
      A ROS package to detect rgbd people with SORT(Simple Online and Realtime Tracking) algorithm.
  </description>
  <maintainer email="14030535@upgto.edu.mx">JoseCarlos</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
</package>
